--- a/prometheus/templates/prometheus.yml.j2
+++ b/prometheus/templates/prometheus.yml.j2
@@ -1,8 +1,12 @@
 ---
+
 global:
-  scrape_interval: 5s
+  scrape_interval:     5s
+  evaluation_interval: 5s
   scrape_timeout: 5s
 
+rule_files:
+  - "rules/*.yml"
 
 scrape_configs:
   - job_name: 'prometheus'
