--- a/prometheus/templates/docker-compose.prometheus.j2
+++ b/prometheus/templates/docker-compose.prometheus.j2
@@ -20,6 +20,7 @@ services:
       - /opt/prometheus/web.yml:/etc/prometheus/web.yml
       - /opt/prometheus/prometheus.key:/etc/prometheus/prometheus.key
       - /opt/prometheus/prometheus.crt:/etc/prometheus/prometheus.crt
+      - /opt/prometheus/rules:/etc/prometheus/rules
       - prometheus-data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
@@ -30,25 +31,14 @@ services:
 
 
   alertmanager:
-    image: prom/alertmanager:v0.24.0
+    image: bitnami/alertmanager:0.24.0
     networks:
       - prometheus_network
     restart: unless-stopped
     expose:
       - 9093
     volumes:
-      - "- /opt/prometheus/alertmanager:/etc/alertmanager"
+      - "/opt/prometheus/alertmanager:/etc/alertmanager"
       - alertmanager-data:/data
     command: --config.file=/etc/alertmanager/alertmanager.yml --log.level=debug
 
-
-  alertmanager-telegram:
-    image: janwh/alertmanager-telegram
-    networks:
-      - prometheus_network
-    restart: unless-stopped
-    expose:
-      - 8080
-    environment:
-      TELEGRAM_CHAT_ID:
-      TELEGRAM_TOKEN:
