--- a/prometheus/templates/prometheus.yml.j2
+++ b/prometheus/templates/prometheus.yml.j2
@@ -8,6 +8,11 @@ global:
 rule_files:
   - "rules/*.yml"
 
+alerting:
+  alertmanagers:
+    - static_configs:
+      - targets: ['alertmanager:9093']
+
 scrape_configs:
   - job_name: 'prometheus'
     scheme: https
