--- a/nginx/templates/docker-compose.nginx.j2
+++ b/nginx/templates/docker-compose.nginx.j2
@@ -4,6 +4,9 @@ version: "3.7"
 networks:
   nginx_network:
 
+volumes:
+  nginx-logs:
+
 services:
   nginx:
     build: .
@@ -20,6 +23,8 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
       - ./www:/var/www
+      - nginx-logs:/var/log/nginx/
+
 
   nginx_exporter:
     image: sophos/nginx-vts-exporter:v0.10.7
