Fixed proemtheus.yml config file

--- a/prometheus/templates/prometheus.yml.j2
+++ b/prometheus/templates/prometheus.yml.j2
@@ -20,10 +20,11 @@ scrape_configs:
       username: "{{ prometheus_basic_auth_login }}"
       password: "{{ prometheus_basic_auth_password }}"
     tls_config:
-      insecure_skip_verify: true
-      ca_file: /etc/prometheus/prometheus.crt
+       insecure_skip_verify: true # Self-Signed ssl
+       cert_file: /etc/prometheus/prometheus.crt
+       key_file: /etc/prometheus/prometheus.key
     static_configs:
-      - targets: ['{{ansible_eth1.ipv4.address}}:9090']
+      - targets: ['prometheus:9090']
 
   - job_name: 'prom_node_ex'
     static_configs:
